# tptd7_parte2

./: .env  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
dags/: data.py  fill_data.py  run_dbt.py
dbt_tp/: .user.yml  Dockerfile  dbt_project.yml  profiles.yml
dbt_tp/models/example/: copias_disponibles.sql  deudores.sql  libros_prestados.sql  my_first_dbt_model.sql  reservas_activas.sql  reservas_insatisfechas.sql  schema.yml
dbt_tp/tests/: generic_tests.sql  mayor_a_cero.sql  mayor_a_cero_prestados.sql  mayor_o_igual_cero.sql  mayor_o_igual_uno  valid_dni.sql  valid_email.sql  valid_isbn_13  valid_isbn_13.sql
sql/: create_tables.sql
td7/: books.csv  config.py  custom_types.py  data_generator.py  database.py  languages.json  schema.py
